# jeeves-airframe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  COVERAGE_AUDIT.md  Cargo.toml  ECOSYSTEM_AUDIT.md  HARDENING_ISSUES.md  README.md  REPO_AUDIT.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
airframe/adapters/: llama_server.py
docs/: DEPLOYMENT.md
jeeves_infra/: __init__.py  bootstrap.py  capability_registry.py  capability_wiring.py  context.py  feature_flags.py  kernel_client.py  pipeline_worker.py  settings.py  wiring.py
jeeves_infra/config/: __init__.py  registry.py
jeeves_infra/database/: INDEX.md  __init__.py  client.py  factory.py  init_schema.py  registry.py
jeeves_infra/events/: __init__.py  bridge.py
jeeves_infra/gateway/: app.py  app_server.py  event_bus.py  governance.py  server.py  websocket.py
jeeves_infra/gateway/proto/: jeeves.proto
jeeves_infra/gateway/routers/: chat.py  governance.py  health.py
jeeves_infra/ipc/: protocol.py  transport.py
jeeves_infra/llm/: factory.py  gateway.py
jeeves_infra/logging/: __init__.py
jeeves_infra/memory/: handlers.py  intent_classifier.py  manager.py  tool_health_service.py  tool_metrics_repository.py
jeeves_infra/memory/repositories/: skill_stub.py
jeeves_infra/memory/services/: chunk_service.py  code_indexer.py  embedding_service.py  event_emitter.py  session_state_adapter.py  session_state_service.py  tool_health_service.py  trace_recorder.py
jeeves_infra/middleware/: __init__.py  rate_limit.py
jeeves_infra/observability/: otel_adapter.py  tracing_middleware.py
jeeves_infra/orchestrator/: __init__.py  agent_events.py  event_context.py  events.py  flow_service.py  governance_service.py  vertical_service.py
jeeves_infra/protocols/: __init__.py  capability.py  engine_pb2.py  engine_pb2_grpc.py  interfaces.py  types.py
jeeves_infra/runtime/: agents.py
jeeves_infra/services/: __init__.py
jeeves_infra/tools/: __init__.py  catalog.py
jeeves_infra/utils/: testing.py  uuid_utils.py
jeeves_infra/verticals/: __init__.py
jeeves_infra/webhooks/: service.py
mission_system/: ARCHITECTURE_DIAGRAM.md  CONSTITUTION.md  INDEX.md  adapters.py  app_server.py  bootstrap.py  capability_wiring.py  contracts_core.py  gateway_chat.py  health.py  pyproject.toml
mission_system/api/: __init__.py  chat.py  governance.py  health.py
mission_system/common/formatting/: __init__.py
mission_system/config/: __init__.py  agent_profiles.py  constants.py  registry.py
mission_system/events/: bridge.py
mission_system/memory/: __init__.py  handlers.py  manager.py  sql_adapter.py
mission_system/memory/messages/: __init__.py
mission_system/memory/repositories/: __init__.py  chunk_repository.py  event_repository.py  graph_stub.py  session_state_repository.py  tool_metrics_repository.py  trace_repository.py
mission_system/memory/services/: __init__.py  chunk_service.py  code_indexer.py  embedding_service.py  event_emitter.py  nli_service.py  session_state_adapter.py  session_state_service.py  tool_health_service.py  trace_recorder.py  xref_manager.py
mission_system/orchestrator/: INDEX.md  __init__.py  agent_events.py  event_context.py  events.py  flow_service.py  governance_service.py
mission_system/prompts/core/: __init__.py  registry.py
mission_system/services/: __init__.py  chat_service.py
mission_system/tests/: README.md  conftest.py
src/: lib.rs
src/dataset/: dpo.rs  grpo.rs  mod.rs  sft.rs
src/eval/: compare.rs  harness.rs  mod.rs
src/jeeves_airframe/: __init__.py
src/python/: mod.rs  rewards.rs
src/reward/: custom.rs  efficiency.rs  mod.rs  schema.rs  tool_success.rs
src/trajectory/: collector.rs  mod.rs  storage.rs  types.rs
tests/: __init__.py  _helpers.py  conftest.py  mission_conftest.py  test_all.rs  test_dataset.py  test_eval.py  test_reward.py  test_trajectory.py
tests/config/: __init__.py  endpoints.py  llm_config.py  markers.py  services.py  timeouts.py
tests/fixtures/: __init__.py  agents.py  database.py  llm.py  services.py  sqlite_client.py
tests/unit/: test_kernel_client.py  test_pipeline_worker.py  test_thresholds.py
(+48 files in other folders)
