[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeeves-airframe"
version = "0.1.0"
description = "Pipeline training data generator for jeeves-core — trajectory collection, reward scoring, dataset export (SFT/DPO/GRPO)"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
hf = ["datasets>=2.0"]
eval = ["tabulate>=0.9"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jeeves_airframe"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
