[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jeeves-airframe"
version = "0.0.2"
description = "Pipeline training data generator for jeeves-core"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/Jeeves-Cluster-Organization/jeeves-airframe"
Changelog = "https://github.com/Jeeves-Cluster-Organization/jeeves-airframe/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["py-bindings"]
module-name = "jeeves_airframe"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
